fix(Menu): style error when collapse

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -2,34 +2,38 @@
   &.el-menu {
     border-right: 0;
   }
-  & .pro-menu-icon {
-    margin-right: 8px;
-    width: 20px;
-    height: 20px;
-    vertical-align: middle;
-  }
-  &.el-menu--collapse > .el-sub-menu > .el-sub-menu__title > .pro-link {
-    height: auto;
-    width: auto;
-    overflow: hidden;
-    visibility: visible;
-    & span {
-      height: 0;
-      width: 0;
-      overflow: hidden;
-      visibility: hidden;
-      display: inline-block;
+  &.el-menu--collapse {
+    width: var(--pro-layout-width-aside-collapse);
+    & .pro-link {
+      height: auto !important;
+      width: auto !important;
+      overflow: hidden !important;
+      visibility: visible !important;
+      & span {
+        height: 0;
+        width: 0;
+        overflow: hidden;
+        visibility: hidden;
+        display: inline-block;
+      }
     }
   }
 }
-.el-sub-menu__title,
-.el-menu-item {
+.pro-menu,
+.el-menu--vertical,
+.el-menu--horizontal {
   & .pro-link {
     display: block;
     width: 100%;
     box-sizing: border-box;
     color: var(--el-text-color-primary);
     transition: var(--el-color-transition-base);
+    & .pro-menu-icon {
+      margin-right: 8px;
+      width: 20px;
+      height: 20px;
+      vertical-align: sub;
+    }
     &:hover {
       color: var(--el-color-primary);
       text-decoration: none;
@@ -39,17 +43,4 @@
 .el-menu-item.is-active .pro-link,
 .el-menu-item .pro-link.router-link-exact-active {
   color: var(--el-color-primary);
-}
-.el-menu--horizontal {
-  & .pro-menu-icon {
-    margin-right: 8px;
-    width: 20px;
-    height: 20px;
-  }
-  & .el-menu .el-menu-item {
-    line-height: 36px;
-  }
-  & > .el-sub-menu .el-sub-menu__title .pro-link {
-    display: inline-block;
-  }
 }
